[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-project"
version = "0.1.0"
description = "Test fixture for SharedWorkflows testing"
readme = "README.md"
authors = [
    {name = "Test User", email = "test@example.com"},
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
]

[tool.hatch.version]
path = "src/test_project/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src --cov-report=term-missing --cov-report=xml {args:tests}"

# Test environment (for consistent naming)
[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov=src --cov-report=term-missing --cov-report=xml {args:tests}"
no-cov = "pytest {args:tests}"

# Lint environment
[tool.hatch.envs.lint]
dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
]

[tool.hatch.envs.lint.scripts]
default = [
    "ruff check src tests",
    "mypy src",
    "pylint src",
    "pydocstyle src",
]
all = [
    "default",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["src/test_project/bad_code.py"]  # Exclude intentionally bad code

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D404"]  # Allow assert in tests, allow "This" in docstrings

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
exclude = ["src/test_project/bad_code.py"]  # Exclude intentionally bad code

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111"]

[tool.pylint.'MASTER']
ignore-paths = ["src/test_project/bad_code.py"]  # Exclude intentionally bad code

[tool.pydocstyle]
convention = "google"
match = "(?!bad_code).*\\.py"  # Exclude bad_code.py
